--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Play.rwpe.ru_lev20095805">
     <meta name="description" content="Play.rwpe.ru_lev20095805">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Play.rwpe.by_lev20095805</title>
     <link rel="shortcut icon" href="https://atom.io/favicon.ico"/>
     <style type="text/css"></style>
@@ -11,7 +12,7 @@
   <body>
     <h1>Play.rwpe.by_lev20095805</h1>
     <h2 style="color:blue">Сайт находиться в разработке...</h2>
-    <h3>Вы можете связаться с создателем(со Львом):</h3>
+    <h3>Вы можете связаться с создателем(со Львом):gyfhfyhgkujgjhkgjjghjg</h3>
     Телеграмм: <a href="https://t.me/patato229" target="_blank"> @patato229</a>
     <hr>
     <p><li><b> тут будут дегендарные и не только игроки лобби сервера</p></p></li>
