--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Play.rwpe.by_lev20095805</h1>
     <h2 style="color:blue">Сайт находиться в разработке...</h2>
-    <h3>Вы можете связаться с создателем(со Львом):gyfhfyhgkujgjhkgjjghjg</h3>
+    <h3>Вы можете связаться с создателем(со Львом):</h3>
     Телеграмм: <a href="https://t.me/patato229" target="_blank"> @patato229</a>
     <hr>
     <p><li><b> тут будут дегендарные и не только игроки лобби сервера</p></p></li>
