--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
+    <title>Play.rwpe.by_lev20095805</title>
     <meta charset="utf-8">
     <meta name="keywords" content="Play.rwpe.ru_lev20095805">
     <meta name="description" content="Play.rwpe.ru_lev20095805">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Play.rwpe.by_lev20095805</title>
-    <link rel="shortcut icon" href="https://atom.io/favicon.ico"/>
-    <style type="text/css"></style>
+    <link rel="shortcut icon" href="https://atom.io/favicon.ico">
+    <link rel="stylesheet" href="lev.css">
   </head>
   <body>
     <h1>Play.rwpe.by_lev20095805</h1>
     <h2 style="color:blue">Сайт находиться в разработке...</h2>
     <h3>Вы можете связаться с создателем(со Львом):</h3>
-    Телеграмм: <a href="https://t.me/patato229" target="_blank"> @patato229</a>
+    Телеграмм:
+    <a class="btn" href="https://t.me/patato229" target="_blank"> patato229</a>
     <hr>
     <p><li><b> тут будут дегендарные и не только игроки лобби сервера</p></p></li>
     <table border="3">
@@ -43,5 +44,6 @@
     <p>Поиск игроков по нику</p>
     <input type="text" name="" value="">
 
+    <p>меня это уже задолбало</p>
   </body>
 </html>
